# django-email-sletter

./: .env_sample  .gitignore  README.md  groups.json  permissions.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: material_confirm_delete.html  material_detail.html  material_form.html  material_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_message.py  0003_alter_message_body_alter_message_theme_mailing.py  0004_mailingstatus.py  0005_mailing_name.py  0006_alter_mailing_name.py  0007_alter_mailing_name.py  0008_rename_mailingstatus_mailinglog.py  0009_alter_mailinglog_options.py  0010_alter_mailing_periodicity_alter_mailing_status.py  0011_mailing_owner.py  0012_client_owner_message_owner.py  0013_alter_mailing_options.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_status_detail.html  mailinglog_list.html  message_confirm_delete.html  (+3 more)
mailing/templatetags/: custom_tags.py
static/css/: carousel.css  footer.css  style.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_is_blocked.py  0003_alter_user_is_blocked.py  0004_remove_user_is_blocked.py
(+7 files in other folders)
